Fix a minor design issue related to collapsing fieldsets

--- a/assets/css/easyadmin-theme/forms.css
+++ b/assets/css/easyadmin-theme/forms.css
@@ -496,6 +496,12 @@ label.form-check-label {
     overflow: clip;
 }
 
+/* allow contents (e.g. dropdowns) to overflow when fieldset is expanded */
+.form-fieldset-body.show:not(.collapsing),
+.form-fieldset-body.show:not(.collapsing) > .row {
+    overflow: visible;
+}
+
 @media (prefers-reduced-motion: reduce) {
     .form-fieldset-body,
     .form-column .form-fieldset-header,
